# standards

./: .gitignore  .pre-commit-hooks.yaml  .pyright-strict.json  .ruff-strict.toml  Makefile  README.md  pyproject.toml  sgconfig.yml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: auto-release.yml  configs-sync-ci.yml  heal-tags.yml  iac-ci.yml  lint-configs-ci.yml  npm-deprecate.yml  python-ci.yml  release.yml  sql-ci.yml  tsconfig-ci.yml  typescript-ci.yml
ast-grep-rules/python/: inefficient-string-concat-in-loop.yml  no-sequential-await.yml  prefer-discriminated-union.yml  prefer-str-enum.yml
ast-grep-rules/typescript/: no-client-side-data-fetching.yml  prefer-server-actions.yml
configs/: eslint.strict.mjs  pyright.strict.toml  ruff.strict.toml
docs/: static-analysis-recommendations.md
docs/proposals/: 2026-07-lint-expansion.md
plugins/sarj-audit/.claude-plugin/: plugin.json
plugins/sarj-audit/commands/: authn-and-authz.md  client-server-boundary.md  concurrency-and-performance.md  data-contracts.md  database-schemas-and-migrations.md  dead-and-duplicate-code.md  decouple-components-with-di.md  error-handling.md  externalize-configuration-and-secrets.md  idempotency-and-atomicity.md  libraries.md  linting.md  magic-values.md  observability.md  readability-and-naming.md  service-layer.md  stack-detection.md  stack.md  stepdown.md  strengthen-ci-cd-and-tooling.md  test-quality-and-strategy.md  zod-types.md
tests/: inefficient-string-concat-in-loop-test.yml  no-client-side-data-fetching-test.yml  no-sequential-await-test.yml  prefer-discriminated-union-test.yml  prefer-server-actions-test.yml  prefer-str-enum-test.yml
tests/__snapshots__/: inefficient-string-concat-in-loop-snapshot.yml  no-client-side-data-fetching-snapshot.yml  no-sequential-await-snapshot.yml  prefer-discriminated-union-snapshot.yml  prefer-server-actions-snapshot.yml  prefer-str-enum-snapshot.yml
