# Root pyproject.toml exists so pre-commit (which expects single-package
# repos) can install sarj-python-lint directly from a git rev. Same source
# layout as packages/python-lint/ — hatchling just points at it.
[project]
name = "sarj-python-lint"
version = "0.1.4"
description = "Custom Python + SQL lint rules — AST-based, pre-commit-friendly, hypermodern defaults"
readme = "packages/python-lint/README.md"
authors = [{ name = "sarj-ai" }]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "sqlfluff>=3.0",
]

[project.scripts]
sarj-python-lint = "sarj_python_lint.__main__:main"

[project.urls]
Homepage = "https://github.com/sarj-ai/linting"
Repository = "https://github.com/sarj-ai/linting"
Issues = "https://github.com/sarj-ai/linting/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/python-lint/src/sarj_python_lint"]
